--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="/css/jquery.treeview.css"/>
     <link rel="stylesheet" href="/css/screen.css" />
     <script type="text/javascript" src="/js/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.validate.min.js"></script>
     <script src="/js/jquery.treeview.js" type="text/javascript"></script>
     <script src="/js/jquery.treeview.edit.js" type="text/javascript"></script>
 
