--- a/views/publications/publications_list.ejs
+++ b/views/publications/publications_list.ejs
@@ -157,7 +157,7 @@
                         $('.editable').hide();
                         $('.edit_lnk').show();
                         $('.ro_field').show();
-                        location.reload();
+                        //location.reload();
                         ev.preventDefault()
                     })
 
