--- a/views/publications/publications_list.ejs
+++ b/views/publications/publications_list.ejs
@@ -41,7 +41,7 @@
                 <div>
                     <div style="float:right;">
                     <a href="/publications/show/<%=publications[i]._id%>" class="ro_field">Details</a>
-    <a href="" class="del_lnk" id="delete_pub_<%=publications[i]._id%>">DELETE</a>
+    <a href="" class="del_lnk ro_field" id="delete_pub_<%=publications[i]._id%>">DELETE</a>
 
                     </div>
                     <h3>
