--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,11 +3,12 @@
     <link rel="stylesheet" href="/css/style.css" type="text/css" media="all">
     <link rel="stylesheet" href="/css/jquery.treeview.css"/>
     <link rel="stylesheet" href="/css/screen.css" />
+    <link rel="stylesheet" href="/css/ui-lightness/jquery-ui-1.8.19.custom.css">
     <script type="text/javascript" src="/js/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="/js/jquery.validate.min.js"></script>
     <script src="/js/jquery.treeview.js" type="text/javascript"></script>
     <script src="/js/jquery.treeview.edit.js" type="text/javascript"></script>
-
+    <script type="text/javascript" src="/js/jquery-ui-1.8.19.custom.min.js"></script>
 
 </head>
 <body>
