--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,7 @@
     <script src="/js/jquery.treeview.js" type="text/javascript"></script>
     <script src="/js/jquery.treeview.edit.js" type="text/javascript"></script>
     <script type="text/javascript" src="/js/jquery-ui-1.8.19.custom.min.js"></script>
+    <script type="text/javascript" src="/js/ui.multisortable.js"></script>
 
 </head>
 <body>
