--- a/views/expertises/expertise_edit_panel.ejs
+++ b/views/expertises/expertise_edit_panel.ejs
@@ -4,19 +4,24 @@
              <li><label>Name</label><input class="required" name="name" id="expertise_name" value="<%=expertise.name||''%>"/></li>
              <li>
                  <label>Tweeters</label>
-                 <ul id="sortable1" class="connectedSortable availableTweeters" style="height:400px; width:300px; border: 1px; border-style: solid;overflow: auto;">
-                     <li style="height:25px; font-weight: bold; background: #d3d3d3;width: 100%;margin-left: 0px;">Available Tweeters</li>
+                 <div id="sortable1" class="connectedSortable availableTweeters sortable" style="height:400px; width:300px; border: 1px; border-style: solid;overflow: auto;">
+                     <div style="width: 100%; height:25px; font-weight: bold; background: #d3d3d3;margin-left: 0px;">
+                         Available Tweeters
+                         <div style="float:right;"><a id="select_all_available_tweeters" href="#">Select All</a></div>
+                     </div>
                     <%for(var a=0;a<availableTweeters.length;a++){%>
-                 	    <li class="ui-state-default available_tweeter" id="tweeter_<%=availableTweeters[a]._id%>"><%=availableTweeters[a].name%></li>
+                 	    <div class="ui-state-default available_tweeter" id="tweeter_<%=availableTweeters[a]._id%>"><%=availableTweeters[a].name%></div>
                     <%}%>
-                </ul>
-                 <ul id="sortable2" class="connectedSortable selectedTweeters" style="height:400px; width:300px; border: 1px; border-style: solid;overflow: auto">
-                     <li style="height:25px; font-weight: bold; background: #d3d3d3;width: 100%;margin-left: 0px;"><%=expertise.name||''%> Tweeters (<%=expertiseTweeters.length%>)</li>
+                </div>
+                 <div id="sortable2" class="connectedSortable selectedTweeters sortable" style="height:400px; width:300px; border: 1px; border-style: solid;overflow: auto">
+                     <div style="width: 80%; height:25px; font-weight: bold; background: #d3d3d3;width: 100%;margin-left: 0px;"><%=expertise.name||''%> Tweeters (<%=expertiseTweeters.length%>)
+                         <div style="float:right;"><a id="select_all_selected_tweeters" href="#">Select All</a></div>
+                     </div>
                      <%for(var e=0;e<expertiseTweeters.length;e++){%>
-                  	    <li class="ui-state-default selected_tweeter" id="tweeter_<%=expertiseTweeters[e]._id%>"><%=expertiseTweeters[e].name%></li>
+                  	    <div class="ui-state-default selected_tweeter" id="tweeter_<%=expertiseTweeters[e]._id%>"><%=expertiseTweeters[e].name%></div>
                      <%}%>
 
-                               </ul>
+                               </div>
 
              </li>
             <li><div class="expertise_id" id="expertise_id_<%=expertise._id%>"></div></li>
@@ -34,10 +39,12 @@
     </ul>
 </form>
 
-<script>
+
+
+<script>/*
 $(function() {
 	$( "#sortable1, #sortable2" ).sortable({
 		connectWith: ".connectedSortable"
 	}).disableSelection();
-});
+});*/
 </script>
