--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,3 +96,26 @@ label.error { float: none; color: red; padding-left: .5em; vertical-align: top; 
 .container div{background-color:#333;color:#aaa;border:1px solid #777;background-color:#333;color:#aaa;border-radius:.25em;cursor:default;height:1em;}
 .container div:hover{background-color:#383838;color:#ccc;}
 .ui-multisort-grouped{background-color:#36a !important;border-color:#036 !important;color:#fff !important;font-weight:bolder;}
+
+#loading_modal {
+
+    z-index: 10000;
+    left: 0px;
+    right: 0px;
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(205,205,205,0.5);
+    padding-left: 50%;
+    padding-top: 200px;
+}
+
+#loading_modal span {
+    font-weight: bolder;
+    font-size: 18px;
+    padding-left: 36px;
+    padding-bottom: 10px;
+    background-image: url('/images/ajax-loader.gif');
+    background-repeat:no-repeat;
+}
