--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,7 +103,7 @@ label.error { float: none; color: red; padding-left: .5em; vertical-align: top; 
     left: 0px;
     right: 0px;
     position: absolute;
-    display: block;
+    display: none;
     width: 100%;
     height: 100%;
     background-color: rgba(205,205,205,0.5);
